fix responsiviness errors on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,7 @@ hr {
 #instagram-heading {
     margin-left: 10px;
     margin-top: 15px;
+    margin-bottom: 15px;
     text-align: center;
     width: 100%;
 }
@@ -123,13 +124,13 @@ hr {
 div > p {
     text-align: justify;
     margin-top: 15px;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 20px;
-    font-family: Roboto;
-    width: 100%;
 }
 
 .middle-about-heading {
-    width: 40%;
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -214,8 +215,8 @@ footer {
 @media screen and (max-width: 1200px) {
     #join-us {
         width: 65%;
-        height: 1200px;
         margin: 0 auto;
+        margin-bottom: 40px;
         clear: both;
         padding: 0;
     }
@@ -258,7 +259,8 @@ footer {
     #menu {
         clear: left;
         float: left;
-        margin-left: 30px;
+        margin-left: auto;
+        margin-right: auto;
         margin-bottom: 20px;
         line-height: 25px;
     }
@@ -292,12 +294,31 @@ footer {
     #photos {
         column-count: 3;
     }
+
+    #menu li {
+        margin-right: 15px;
+        margin-left: 18px;
+    }
 }
 
 /* for small mobile screen sizes */
 @media screen and (max-width: 700px) {
     #photos {
         column-count: 2;
+    }
+
+    div > p {
+        text-align: justify;
+        margin-top: 15px;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 20px;
+    }
+
+    #join-us {
+        width: 90%;
+        height: auto;
+        margin-bottom: 10px;
     }
 }
 
